--- a/BookkeeperWebApp/war/TimadorusWebApp.html
+++ b/BookkeeperWebApp/war/TimadorusWebApp.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <link type="text/css" rel="stylesheet" href="BookkeeperWebApp.css">
-    <title>Bookkeeper WebApplication</title>
-    <script type="text/javascript" language="javascript" src="bookkeeperwebapp/bookkeeperwebapp.nocache.js"></script>
+    <link type="text/css" rel="stylesheet" href="TimadorusWebApp.css">
+    <title>Timadorus WebApplication</title>
+    <script type="text/javascript" language="javascript" src="timadoruswebapp/timadoruswebapp.nocache.js"></script>
   </head>
 
   <body>
