--- a/war/TimadorusWebApp.html
+++ b/war/TimadorusWebApp.html
@@ -10,7 +10,9 @@
   <body>
     <h1>Bookkeeper: Timadorus</h1>
 
+    <div id="menu"></div>
 	<div id="content"></div>    
+	<div id="information"></div>
     
     <!-- OPTIONAL: include this if you want history support -->
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
