cleaned up and style changed, repaired objects
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/branches/with_usability@571 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/war/TimadorusWebApp.html
+++ b/war/TimadorusWebApp.html
@@ -8,13 +8,15 @@
   </head>
 
   <body>
-    <h1>Bookkeeper: Timadorus</h1>
+  	<h1>Bookkeeper: Timadorus</h1>
 
-    <div id="menu"></div>
-	<div id="content"></div>    
-	<div id="information"></div>
-    
-    <!-- OPTIONAL: include this if you want history support -->
-    <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
+  	<div id="menu"></div>
+  	<div id="content"></div>
+  	<div id="information"></div>
+
+  	<!-- OPTIONAL: include this if you want history support -->
+  	<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1'
+  		style="position:absolute;width:0;height:0;border:0">
+  	</iframe>
   </body>
 </html>
