--- a/war/TimadorusWebApp.html
+++ b/war/TimadorusWebApp.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" language="javascript" src="timadoruswebapp/timadoruswebapp.nocache.js"></script>
   </head>
 
-  <body style="background: black">
+  <body style="background: #FFEFD5">
   	<h1>Bookkeeper: Timadorus</h1>
 
   	<div id="menu"></div>
