--- a/TimadorusWebApp/war/TimadorusWebApp.html
+++ b/TimadorusWebApp/war/TimadorusWebApp.html
@@ -9,12 +9,14 @@
     <title>Web Application Starter Project</title>
     <script type="text/javascript" language="javascript" src="TimadorusWebApp/TimadorusWebApp.nocache.js"></script>
   </head>
-  <body>
+  <body style="background:#010000">
+  <img src="simlostodyssey05.jpg">
   
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
 	<div id="head"></div>
 	<div id="menu"></div>
 	<div id="content"></div>
+	<div id="information"></div>
 	<div id="error"></div>
 	<div id="foot"></div>
   </body>
