--- a/war/TimadorusWebApp.html
+++ b/war/TimadorusWebApp.html
@@ -1,9 +1,11 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!doctype html>
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link type="text/css" rel="stylesheet" href="TimadorusWebApp.css">
+    
     <title>Timadorus WebApplication</title>
+    
     <script type="text/javascript" language="javascript" src="timadoruswebapp/timadoruswebapp.nocache.js"></script>
   </head>
 
